--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="fondo">
-    <header>
+    <header id="nav">
         <div id="particles-js"></div>
         <div id="cont_carga">
             <div id="carga"></div>
@@ -20,7 +20,7 @@
             </div>
         </div>
 
-        <nav class="barra_navegacion" id="nav">
+        <nav class="barra_navegacion">
            <ul class="nav_ul">
                 <li class="nav_li">
                     <img src="imagen/MMblanco-14-14.png" alt="logo">
@@ -41,11 +41,10 @@
                 </li>
             </ul>
                <ul class="nav_ul">
-                <li class="nav_li_red"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
-                <li class="nav_li_red"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
                 <li class="nav_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
                 <li class="nav_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="fab fa-twitch"></i></a></li>
-                <li class="nav_li_red"><a href="https://twitter.com/maimonney" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li class="nav_li_red"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
+                <li class="nav_li_red"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
             </ul>
         </nav>
         <div class="responsive_nav">
@@ -57,8 +56,10 @@
                     <ul class="nav_responsive_ul">
                        <div class="link_responsive">
                            <li class="nav_responsive_li nav_color"><a href="index.html">Inicio</a></li>
-                        <li class="nav_responsive_li nav_color"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
-                            <li class="nav_responsive_li nav_color"><a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
+                        <li class="nav_responsive_li nav_color"><a href="contacto.html">Contacto</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html">Trabajos</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
+                            <li class="nav_responsive_li nav_color"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
                             <li class="nav_responsive_li nav_color"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
                             <li class="nav_responsive_li nav_color"><a href="https://www.facebook.com/mailen.monney" target="_blank"><i class=" fab fa-facebook-f"></i></a></li>
                             <li class="nav_responsive_li nav_color"><a href="https://www.tiktok.com/@321xmaix123?lang=es" target="_blank"><i class=" fab fa-tiktok"></i></a></li>
@@ -117,9 +118,12 @@
             <li class="pie_de_pagina_li"><a href="trabajos.html">Trabajos</a></li>
         </ul>
         <ul>
+           <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
+           <li class="pie_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="iconos_pie fab fa-twitch"></i></a></li>
+           <li class="pie_li_red"><a  href="https://www.behance.net/mailenmonney" target="_blank"><i class="iconos_pie fab fa-behance"></i></a></li>
+           <li class="pie_li_red"><a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class="iconos_pie fab fa-linkedin-in"></i></a></li>
             <li class="pie_li_red"><a href="https://www.tiktok.com/@321xmaix123?lang=es" target="_blank"><i class="iconos_pie fab fa-tiktok"></i></a></li>
-            <li class="pie_li_red"> <a href="https://www.pinterest.es/mailenmonney/_saved/" target="_blank"><i class="iconos_pie fab fa-pinterest"></i></a></li>
-            <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
+            <li class="pie_li_red"><a  href="https://twitter.com/maimonney" target="_blank"><i class="iconos_pie fab fa-twitter"></i></a></li>
             <li class="pie_li_red"><a href="https://www.facebook.com/mailen.monney" target="_blank"><i class="iconos_pie fab fa-facebook-f"></i></a></li>
         </ul>
         <a href="contacto.html" class="mail">maimonney30@gmail.com</a>
