--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="nav">
 
         <div id="particles-js"></div>
 
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <nav class="barra_navegacion" id="nav">
+        <nav class="barra_navegacion">
             <ul class="nav_ul">
                 <li class="nav_li">
                     <img src="imagen/MMblanco-14-14.png" alt="logo">
@@ -43,11 +43,10 @@
                 </li>
             </ul>
             <ul class="nav_ul">
+               <li class="nav_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
+                <li class="nav_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="fab fa-twitch"></i></a></li>
                 <li class="nav_li_red"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
                 <li class="nav_li_red"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
-                <li class="nav_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
-                <li class="nav_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="fab fa-twitch"></i></a></li>
-                <li class="nav_li_red"><a href="https://twitter.com/maimonney" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </nav>
 
@@ -89,7 +88,7 @@
             <div class="sobre_mi">
                 <h2>Sobre Mi</h2>
                 <p>Me llamo Mailen Monney y tengo 23 años. <br> Vivo en Argentina, Buenos Aires en la ciudad de Campana. <br> Nací el 11 de noviembre de 1998.</p>
-                <a href="cv/Mailen_Monney_Porfolio_Curriculum.pdf" target="_blank" class="boton boton_1">CV y porfolio.</a>
+                <a href="pdf/Mailen_Monney_Porfolio_Curriculum.pdf" target="_blank" class="boton boton_1">CV y porfolio.</a>
                 <div class="container">
                     <a href="#contenedor_2" class="leer">
                         <svg width="277" height="62">
@@ -103,7 +102,7 @@
                     </a>
                 </div>
                 <div class="container">
-                    <a href="cv/Mailen_Monney_Porfolio_Curriculum.pdf" target="_blank" class="leer">
+                    <a href="pdf/Mailen_Monney_Porfolio_Curriculum.pdf" target="_blank" class="leer">
                         <svg width="277" height="62">
                             <linearGradient id="grad1">
                                 <stop offset="0%" stop-color="#b86dd8" />
@@ -226,9 +225,12 @@
             <li class="pie_de_pagina_li"><a href="trabajos.html">Trabajos</a></li>
         </ul>
         <ul>
+           <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
+           <li class="pie_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="iconos_pie fab fa-twitch"></i></a></li>
+           <li class="pie_li_red"><a  href="https://www.behance.net/mailenmonney" target="_blank"><i class="iconos_pie fab fa-behance"></i></a></li>
+           <li class="pie_li_red"><a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class="iconos_pie fab fa-linkedin-in"></i></a></li>
             <li class="pie_li_red"><a href="https://www.tiktok.com/@321xmaix123?lang=es" target="_blank"><i class="iconos_pie fab fa-tiktok"></i></a></li>
-            <li class="pie_li_red"> <a href="https://www.pinterest.es/mailenmonney/_saved/" target="_blank"><i class="iconos_pie fab fa-pinterest"></i></a></li>
-            <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
+            <li class="pie_li_red"><a  href="https://twitter.com/maimonney" target="_blank"><i class="iconos_pie fab fa-twitter"></i></a></li>
             <li class="pie_li_red"><a href="https://www.facebook.com/mailen.monney" target="_blank"><i class="iconos_pie fab fa-facebook-f"></i></a></li>
         </ul>
         <a href="contacto.html" class="mail">maimonney30@gmail.com</a>
