--- a/trabajos.html
+++ b/trabajos.html
@@ -11,15 +11,15 @@
 </head>
 
 <body class="fondo">
-    <header>
+    <header id="nav">
         <div id="particles-js"></div>
         <div id="cont_carga">
             <div id="carga"></div>
             <div id="carga_img">
-                <img src="imagen/isoMM.png" alt="">
+                <img src="imagen/isoMM.png" alt="mi logo">
             </div>
         </div>
-        <nav class="barra_navegacion" id="nav">
+        <nav class="barra_navegacion">
             <ul class="nav_ul">
                 <li class="nav_li">
                     <img src="imagen/MMblanco-14-14.png" alt="logo">
@@ -40,11 +40,10 @@
                 </li>
             </ul>
             <ul class="nav_ul">
-                <li class="nav_li_red"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
-                <li class="nav_li_red"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
                 <li class="nav_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
                 <li class="nav_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="fab fa-twitch"></i></a></li>
-                <li class="nav_li_red"><a href="https://twitter.com/maimonney" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li class="nav_li_red"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
+                <li class="nav_li_red"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
             </ul>
         </nav>
         <div class="responsive_nav">
@@ -332,7 +331,7 @@
                         <div class="overlay">
                             <h3>Revista para historia del arte</h3>
                             <p>Revista para un trabajo de facultad sobre diferentes vanguardias. <br>
-                                <a href="imagen/trabajos_de_facultad/revista_mailen_monney_historia.pdf" target="_blank"> Click para ver el PDF.</a>
+                                <a href="pdf/revista_mailen_monney_historia.pdf" target="_blank"> Click para ver el PDF.</a>
                             </p>
                         </div>
                     </div>
@@ -464,9 +463,12 @@
             <li class="pie_de_pagina_li"><a href="trabajos.html">Trabajos</a></li>
         </ul>
         <ul>
+           <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
+           <li class="pie_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="iconos_pie fab fa-twitch"></i></a></li>
+           <li class="pie_li_red"><a  href="https://www.behance.net/mailenmonney" target="_blank"><i class="iconos_pie fab fa-behance"></i></a></li>
+           <li class="pie_li_red"><a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class="iconos_pie fab fa-linkedin-in"></i></a></li>
             <li class="pie_li_red"><a href="https://www.tiktok.com/@321xmaix123?lang=es" target="_blank"><i class="iconos_pie fab fa-tiktok"></i></a></li>
-            <li class="pie_li_red"> <a href="https://www.pinterest.es/mailenmonney/_saved/" target="_blank"><i class="iconos_pie fab fa-pinterest"></i></a></li>
-            <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
+            <li class="pie_li_red"><a  href="https://twitter.com/maimonney" target="_blank"><i class="iconos_pie fab fa-twitter"></i></a></li>
             <li class="pie_li_red"><a href="https://www.facebook.com/mailen.monney" target="_blank"><i class="iconos_pie fab fa-facebook-f"></i></a></li>
         </ul>
         <a href="contacto.html" class="mail">maimonney30@gmail.com</a>
