--- a/trabajos.html
+++ b/trabajos.html
@@ -331,7 +331,7 @@
                         <div class="overlay">
                             <h3>Revista para historia del arte</h3>
                             <p>Revista para un trabajo de facultad sobre diferentes vanguardias. <br>
-                                <a href="pdf/revista_mailen_monney_historia.pdf" target="_blank"> Click para ver el PDF.</a>
+                                <a href="https://www.behance.net/gallery/131650047/Revista-para-la-carrera-de-Diseno-Grafico" target="_blank"> Click para ver el trabajo completo.</a>
                             </p>
                         </div>
                     </div>
