--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </li>
             </ul>
             <ul class="nav_ul">
-               <li class="nav_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
+                <li class="nav_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
                 <li class="nav_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="fab fa-twitch"></i></a></li>
                 <li class="nav_li_red"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
                 <li class="nav_li_red"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
@@ -58,9 +58,15 @@
                 <nav class="nav_responsive">
                     <ul class="nav_responsive_ul">
                         <div class="link_responsive">
-                            <li class="nav_responsive_li nav_color"><a href="index.html">Inicio</a></li>
-                            <li class="nav_responsive_li nav_color"><a href="contacto.html">Contacto</a></li>
-                            <li class="nav_responsive_li nav_color"><a href="trabajos.html">Trabajos</a></li>
+                            <li class="nav_responsive_li nav_color text"><a href="index.html">Inicio</a></li>
+                            <li class="nav_responsive_li nav_color text"><a href="contacto.html">Contacto</a></li>
+                            <li class="nav_responsive_li nav_color text"><a href="trabajos.html">Trabajos</a></li>
+                            <li class="nav_responsive_li nav_color text"><a href="trabajos.html#dibujos">Dibujos</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#infografia">Infografías</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#fotomontage">Fotomontage</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#branding">Branding</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#facultad">Trabajos de la facultad</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#papalotl">Papalotl</a></li>
                             <li class="nav_responsive_li nav_color"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
                             <li class="nav_responsive_li nav_color"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
                             <li class="nav_responsive_li nav_color"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
@@ -225,12 +231,12 @@
             <li class="pie_de_pagina_li"><a href="trabajos.html">Trabajos</a></li>
         </ul>
         <ul>
-           <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
-           <li class="pie_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="iconos_pie fab fa-twitch"></i></a></li>
-           <li class="pie_li_red"><a  href="https://www.behance.net/mailenmonney" target="_blank"><i class="iconos_pie fab fa-behance"></i></a></li>
-           <li class="pie_li_red"><a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class="iconos_pie fab fa-linkedin-in"></i></a></li>
+            <li class="pie_li_red"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class="iconos_pie fab fa-instagram"></i></a></li>
+            <li class="pie_li_red"><a href="https://www.twitch.tv/maimonney" target="_blank"><i class="iconos_pie fab fa-twitch"></i></a></li>
+            <li class="pie_li_red"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class="iconos_pie fab fa-behance"></i></a></li>
+            <li class="pie_li_red"><a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class="iconos_pie fab fa-linkedin-in"></i></a></li>
             <li class="pie_li_red"><a href="https://www.tiktok.com/@321xmaix123?lang=es" target="_blank"><i class="iconos_pie fab fa-tiktok"></i></a></li>
-            <li class="pie_li_red"><a  href="https://twitter.com/maimonney" target="_blank"><i class="iconos_pie fab fa-twitter"></i></a></li>
+            <li class="pie_li_red"><a href="https://twitter.com/maimonney" target="_blank"><i class="iconos_pie fab fa-twitter"></i></a></li>
             <li class="pie_li_red"><a href="https://www.facebook.com/mailen.monney" target="_blank"><i class="iconos_pie fab fa-facebook-f"></i></a></li>
         </ul>
         <a href="contacto.html" class="mail">maimonney30@gmail.com</a>
