--- a/contacto.html
+++ b/contacto.html
@@ -55,9 +55,15 @@
                 <nav class="nav_responsive">
                     <ul class="nav_responsive_ul">
                        <div class="link_responsive">
-                           <li class="nav_responsive_li nav_color"><a href="index.html">Inicio</a></li>
-                        <li class="nav_responsive_li nav_color"><a href="contacto.html">Contacto</a></li>
-                            <li class="nav_responsive_li nav_color"><a href="trabajos.html">Trabajos</a></li>
+                           <li class="nav_responsive_li nav_color text"><a href="index.html">Inicio</a></li>
+                            <li class="nav_responsive_li nav_color text"><a href="contacto.html">Contacto</a></li>
+                            <li class="nav_responsive_li nav_color text"><a href="trabajos.html">Trabajos</a></li>
+                            <li class="nav_responsive_li nav_color text"><a href="trabajos.html#dibujos">Dibujos</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#infografia">Infografías</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#fotomontage">Fotomontage</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#branding">Branding</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#facultad">Trabajos de la facultad</a></li>
+                            <li class="nav_responsive_li nav_color"><a href="trabajos.html#papalotl">Papalotl</a></li>
                             <li class="nav_responsive_li nav_color"><a href="https://www.behance.net/mailenmonney" target="_blank"><i class=" fab fa-behance"></i></a></li>
                             <li class="nav_responsive_li nav_color"> <a href="https://www.linkedin.com/in/mailen-monney-ba5607222/" target="_blank"><i class=" fab fa-linkedin-in"></i></a></li>
                             <li class="nav_responsive_li nav_color"><a href="https://www.instagram.com/maimonney/" target="_blank"><i class=" fab fa-instagram"></i></a></li>
