--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
                     <li class="programas_3">
                         <p>After Effects <br> 10%</p>
                     </li>
+                    <li class="programas_2">
+                        <p>Python <br> 30%</p>
+                    </li>
                 </ul>
                 <ul class="contenedor_programas">
                     <li class="programas_2">
